# autonomous-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
references/: documento_agente_autonomo_local.md
src/: __init__.py  main.py
src/api/: __init__.py  agent.py  auth.py  routes.py  schemas.py
src/core/: __init__.py  config.py  logging.py
src/llm/: __init__.py  anthropic_connector.py  base.py  groq_connector.py
src/storage/: __init__.py  database.py  models.py  repository.py
src/tools/: __init__.py  base.py  executor.py  registry.py
src/tools/builtin/: __init__.py  health_check.py  list_dir.py  read_file.py
tests/: test_api.py  test_builtin_tools.py  test_executor.py  test_integration.py  test_llm.py  test_registry.py  test_storage.py
